2002-05-12  Bruno Haible  <bruno@clisp.org>

	* po-charset.c (po_charset_canonicalize): Add ISO-8859-14, KOI8-T,
	GEORGIAN-PS to the list of allowed encodings.

2002-04-30  Bruno Haible  <bruno@clisp.org>

	* hostname.c (ipv6_ntop): Provide a fallback definition for systems
	that define s6_addr but no s6_addr16 element of 'struct in6_addr'.
	Reported by Perry Rapp <PRapp@smartronix.com>.

2002-04-28  Bruno Haible  <bruno@clisp.org>

	* project-id: Recognize package name and version when given by a
	two-argument AC_INIT invocation (autoconf 2.52 and newer).

2002-04-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.2 released.

2002-04-23  Bruno Haible  <bruno@clisp.org>

	* write-po.h (message_page_width_ignore): New declaration.
	* write-po.c (wrap_strings): New variable.
	(message_page_width_ignore): New function.
	(wrap): Ignore the do_wrap argument if wrap_strings is false.
	* msgattrib.c (long_options): Add --no-wrap option.
	(main): Handle option --no-wrap.
	(usage): Document option --no-wrap.
	* msgcat.c: Likewise.
	* msgcomm.c: Likewise.
	* msgconv.c: Likewise.
	* msgen.c: Likewise.
	* msgfilter.c: Likewise.
	* msggrep.c: Likewise.
	* msginit.c: Likewise.
	* msgmerge.c: Likewise.
	* msgunfmt.c: Likewise.
	* msguniq.c: Likewise.
	* xgettext.c: Likewise.

2002-04-19  Bruno Haible  <bruno@clisp.org>

	* msginit.c (catalogname_for_locale): Add wa_BE. Change Javanese from
	jw to jv.

2002-04-15  Bruno Haible  <bruno@clisp.org>

	* po-lex.h (po_gram_error): Treat Apple's version of GCC like non-GCC.
	* po-lex.c (po_gram_error): Likewise.
	Reported by Richard S. Blake <blakers@presence-group.com>.

2002-04-04  Bruno Haible  <bruno@clisp.org>

	* po-lex.h (po_gram_error): Use __VA_ARGS__ + 0 instead of __VA_ARGS__.
	(po_gram_error_at_line): LIkewise.
	Fixes syntax error when __VA_ARGS__ is empty.
	Reported by Trond Eivind Glomsrød <teg@redhat.com>.

2002-04-04  Bruno Haible  <bruno@clisp.org>

	* msginit.c (find_pot): Add dummy return, to avoid gcc warning.
